Tue Sep 16 05:04:56 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (rb_cv_thread_specific): check if no warnings.

Tue Sep  9 01:52:28 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (Init_IO): max_file_descriptor_lock is per-process resource.

Tue Sep  9 00:55:34 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (ruby_vm_init): split from ruby_init.

	* eval.c (ruby_vm_run): cleans up VM always.

	* inits.c (rb_call_inits): separated per-process and per-VM
	  intializations.

	* parse.y (sym_str_new): creates VM-neutral string.

	* vm_core.h (struct rb_vm_struct): includes method cache.

	* vm.c (vm_init2): initializes method cache.

	* vm_eval.c, vm_method.c: use method cache in VM.

	* mvm.c (specific_key): must be initialized.

	* st.c (st_init_table_with_size, ADD_DIRECT): fixed typo.

Tue Sep  9 00:20:10 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (rb_econv_asciicompat_encoding): check decoder.

Tue Sep  9 00:00:47 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (rb_econv_t): last_error.partial_input removed.

Mon Sep  8 23:24:54 2008  Tanaka Akira  <akr@fsij.org>

	* include/ruby/encoding.h (rb_econv_asciicompat_encoding): renamed
	  from rb_econv_stateless_encoding to apply stateless ASCII
	  incompatible encodings such as UTF-16BE.

	* io.c (make_writeconv): use rb_econv_asciicompat_encoding.

	* transcode_data.h (rb_transcoder_asciicompat_type_t): renamed from
	  rb_transcoder_stateful_type_t.
	  (rb_transcoder): use rb_transcoder_asciicompat_type_t.

	* transcode.c: follow the type change.
	  (asciicompat_encoding_i): renamed from stateless_encoding_i.
	  (rb_econv_asciicompat_encoding): renamed from
	  rb_econv_stateless_encoding.
	  (econv_s_asciicompat_encoding): method renamed.

	* tool/transcode-tblgen.rb: follow the type change.

	* enc/trans/utf_16_32.trans: follow the type change.
	  rb_from_UTF_16BE to UTF-8 is asciicompat_decoder.
	  rb_from_UTF_16LE to UTF-8 is asciicompat_decoder.