@@ -516,6 +516,10 @@ static int trap_last_mask;
 # endif
 #endif
 
+#ifdef RUBY_DEBUG_ENV
+int ruby_enable_coredump = 0;
+#endif
+
 #if HAVE_PTHREAD_H
 #include <pthread.h>
 #endif
@@ -1048,10 +1052,6 @@ ruby_sig_finalize()
     }
 }
 
-
-#ifdef RUBY_DEBUG_ENV
-int ruby_enable_coredump = 0;
-#endif
 
 /*
  * Many operating systems allow signals to be sent to running
