@@ -1,15 +1,15 @@
 #define RUBY_VERSION "1.9.0"
-#define RUBY_RELEASE_DATE "2008-09-16"
+#define RUBY_RELEASE_DATE "2008-11-07"
 #define RUBY_VERSION_CODE 190
-#define RUBY_RELEASE_CODE 20080916
+#define RUBY_RELEASE_CODE 20081107
 #define RUBY_PATCHLEVEL 0
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 9
 #define RUBY_VERSION_TEENY 0
 #define RUBY_RELEASE_YEAR 2008
-#define RUBY_RELEASE_MONTH 9
-#define RUBY_RELEASE_DAY 16
+#define RUBY_RELEASE_MONTH 11
+#define RUBY_RELEASE_DAY 7
 
 #ifdef RUBY_EXTERN
 RUBY_EXTERN const char ruby_version[];
